# AlgorithmExercise

./: .gitignore  CMakeLists.txt  README.md  main.cpp
1-20/: 10_Regular_Expression_Matching.cpp  11_Container_with_Most_Water.cpp  12_Integer_to_Roman.cpp  13_Roman_to_Integer.cpp  14_Longest_Common_Prefix.cpp  15_3_sum.cpp  16_3_Sum_Closest.cpp  17_Letter_Combinations_of_a_Phone_Number.cpp  18_4_Sum.cpp  19_Remove_Nth_Node_from_End_of_List.cpp  1_two_sum.cpp  20_Valid_Parentheses.cpp  2_Add_Two_Numbers.cpp  3_Longest_Substring_Without_Repeating_Characters.cpp  4_Median_of_Two_Sorted_Arrays.cpp  5_Longest_Palindromic_Substring.cpp  6_Zigzag_Conversion.cpp  8_String_to_Integer_Atoi.cpp  9_Palindrome_Number.cpp
21-40/: 21_Merge_Two_Sorted_Lists.cpp  22_Generate_Parentheses.cpp  23_Merge_k_Sorted_Lists.cpp  24_Swap_Nodes_in_Pairs.cpp  25_Reverse_Nodes_in_k_Group.cpp  26_Remove_Duplicates_from_Sorted_Array.cpp  27_Remove_Element.cpp  28_Implement_Strstr.cpp  29_Divide_Two_Integers.cpp  30_Substring_with_Concatenation_of_All_Words.cpp  31_Next_Permutation.cpp  32_Longest_Valid_Parentheses.cpp  33_Search_in_Rotated_Sorted_Array.cpp  34_Find_First_and_Last_Position_of_Element_in_Sorted_Array.cpp  35_Search_Insert_Position.cpp  36_Valid_Sudoku.cpp  37_Sudoku_Solver.cpp  38_Count_and_Say.cpp  39_Combination_Sum.cpp  40_Combination_Sum_ii.cpp  dancing_list.cpp  tempCodeRunnerFile.cpp
41-60/: 41_first_Missing_Positive.cpp  42_Trapping_Rain_Water.cpp  43_Multiply_Strings.cpp  44_Wildcard_Matching.cpp  45_Jump_Game_ii.cpp  46_Permutations.cpp  47_Permutations_ii.cpp  48_Rotate_Image.cpp  50_Powx_N.cpp  52_N_Queens_II.cpp  53_Maximum_Subarray.cpp
61-80/: 61_Rotate_List.cpp  62_Unique_Paths.cpp  63_Unique_Paths_II.cpp  64_Minimum_Path_Sum.cpp  66_Plus_One.cpp  68_Text_Justification.cpp  69_Sqrtx.cpp
ByteDance/: 2020SecondInterview.cpp
Huawei/: question2.cpp  question3.cpp
(+226 files in other folders)
