cmake_minimum_required(VERSION 3.10)
project(Leetcode)

set(CMAKE_CXX_STANDARD 14)

#add_executable(Q ByteDance/2020InternCodingPart/Coupon.cpp)
#add_executable(KickStart KickStart/2020CRound/Perfect_Subarray.cpp)
#add_executable(leetcode leetcode/editor/cn/Utils.h
#        leetcode/editor/cn/[125]valid-palindrome.cpp)
add_executable(main main.cpp)
add_executable(alibaba Alibaba/2020Fall/20200716.cpp Alibaba/2020Fall/OnlineCoding/20200717-Q1.cpp)