cmake_minimum_required(VERSION 3.10)
project(Leetcode)

set(CMAKE_CXX_STANDARD 14)

#add_executable(Q ByteDance/2020InternCodingPart/Coupon.cpp)
#add_executable(KickStart KickStart/2020CRound/Perfect_Subarray.cpp)
#add_executable(leetcode leetcode/editor/cn/Utils.h
#        leetcode/weekly-contest/199/5474-number-of-good-leaf-nodes-pairs.cpp)
add_executable(main main.cpp)
#add_executable(alibaba Alibaba/2020Fall/OnlineCoding/20200724-Q1.cpp )
add_executable(tencent Tencent/IEG_Lightspeed_Quantum_Studios_Group/20200820/question1.cpp)
#add_executable(wangyi wangyi/Q4.cpp)